collapse not working but fixed other things

--- a/src/Homepage/ChooseSettings.css
+++ b/src/Homepage/ChooseSettings.css
@@ -12,7 +12,7 @@
 .settingsOptionsDrop { 
     margin: 10px 7%; 
     padding: 1em; 
-    width: 310px;  
+    width: 348px;  
     border-radius: 10px; 
     font-size: large;
     cursor: pointer;
